# pgvector-django-haystack

./: .dockerignore  Dockerfile  Dockerfile.pgvector  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
django_haystack/: document_store.py  models.py  retrievers.py
tests/: conftest.py  settings.py  test_document_store.py
tests/test-project/test_project/: settings.py
tests/test-project/testapp/: models.py
tests/testapp/migrations/: 0001_vector_extension.py
